--- a/vue-cdn/view/commonFun.html
+++ b/vue-cdn/view/commonFun.html
@@ -2,107 +2,122 @@
 <html>
 
 <head>
-	<meta charset="utf-8">
-	<title>基础功能</title>
-	<link rel="stylesheet" href="../css/global-1.0.css">
-	<link rel="stylesheet" href="../css/commonFun.css" />
+    <meta charset="utf-8">
+    <title>基础功能</title>
+    <link rel="icon" href="../favicon.ico">
+    <link rel="stylesheet" href="../css/global-1.0.css">
+    <link rel="stylesheet" href="../css/commonFun.css" />
 </head>
 
-<body>
-	<div class="center" id="vue">
-		<p class="title">选项卡</p>
-		<div class="tab-menu">
-			<ul>
-				<li :class="{active : tabFlag === 0}" @click="tabToggle(0)">选项1</li>
-				<li :class="{active : tabFlag === 1}" @click="tabToggle(1)">选项2</li>
-				<li :class="{active : tabFlag === 2}" @click="tabToggle(2)">选项3</li>
-			</ul>
-		</div>
+<body> 
+    <div class="center" id="vue">
+        <p class="title">选项卡</p>
+        <div class="tab-menu">
+            <ul>
+                <li :class="{active : tabFlag === 0}" @click="tabFlag = 0;">选项1</li>
+                <li :class="{active : tabFlag === 1}" @click="tabFlag = 1;">选项2</li>
+                <li :class="{active : tabFlag === 2}" @click="tabFlag = 2;">选项3</li>
+            </ul>
+        </div>
+        <div class="tab-con">
+            <div class="con-item" v-show="tabFlag === 0">
+                <span>内容1</span>
+            </div>
+            <div class="con-item" v-show="tabFlag === 1">
+                <span>内容2</span>
+            </div>
+            <div class="con-item" v-show="tabFlag === 2">
+                <span>内容3</span>
+            </div>
+        </div>
+
+        <!--  -->
+        <p class="title">switch开关</p>
+        <div class="switch" :class="{select : switchFlag}" @click="switchFlag = !switchFlag"></div>
+
+        <!--  -->
+        <p class="title">下拉选择</p>
+        <div class="selection">
+            <input type="text" readonly placeholder="请选择" @click="selectConShow = !selectConShow" :value="selectText">
+            <i class="icon-opt" :class="{active : selectConShow}"></i>
+            <ul v-show="selectConShow">
+                <li v-for="item in selectList" @click="selectText=item.value;selectConShow=false">{{ item.value }}</li>
+            </ul>
+        </div>
+
+        <!--  -->
+        <p class="title">表格渲染</p>
+        <div class="table-area">
+            <table>
+                <thead>
+                    <tr>
+                        <th v-for="item in tableHead">{{ item }}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr v-for="item in tableData" :key="item.id">
+                        <td>{{ item.subject }}</td>
+                        <td>{{ item.hour }}</td>
+                        <td>{{ item.isAlternated | handleAlter }}</td>
+                        <td>
+                            <span class="delete" @click="deleteRow(item.id)">删除</span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <!-- 涉及组件嵌套,父子之间通信知识 -->
+        <p class="title">折叠板--涉及组件嵌套</p>
+        <div class="menu">
+            <Panel v-for="item in menuData" :name="item.name" @flag="isShow" :key="item.id">
+                <div class="level2" v-show="panelShow">
+                    <pa-content v-for="(e,i) in item.data" :text="e.value" :key="i"></pa-content>
+                </div>
+            </Panel>
+        </div>
+
+        <p class="title">折叠板</p>
+        <div class="menu">
+            <!--paneldata这个名称不能含大写-->
+            <Panel2 :paneldata="menuData"></Panel2>
+        </div>
+
+        <!--  -->
+        <p class="title">计算属性</p>
+        {{ fullName }}
+        <div class="btn" @click="editVal">更改</div>
+
+        <!--  -->
+        <p class="title">动画效果</p>
+        <div class="animate">
+            <div class="btn" @click="animateShow = !animateShow">显示&隐藏</div>
+            <div class="content">
+                <transition name="bounce">
+                    <p v-show="animateShow">啦啦啦啦啦张九南</p>
+                </transition>
+            </div>
+        </div>
+
+        <!-- 练习内容 -->
+        <p class="title">练习内容</p>
+        <div class="tab-menu">
+            <ul>
+                <li :class="{active : currentView === 'tem1'}" @click="currentView = 'tem1';">选项1</li>
+                <li :class="{active : currentView === 'tem2'}" @click="currentView = 'tem2';">选项2</li>
+                <li :class="{active : currentView === 'tem3'}" @click="currentView = 'tem3';">选项3</li>
+            </ul>
+        </div>
 		<div class="tab-con">
-			<div class="con-item" v-show="tabFlag === 0">
-				<span>内容1</span>
-			</div>
-			<div class="con-item" v-show="tabFlag === 1">
-				<span>内容2</span>
-			</div>
-			<div class="con-item" v-show="tabFlag === 2">
-				<span>内容3</span>
-			</div>
+		    <div class="con-item">
+				<keep-alive include="tem1,tem2" :max="2">
+					<component :is="currentView"></component>
+				</keep-alive>
+		    </div>
 		</div>
-
-		<!--  -->
-		<p class="title">switch开关</p>
-		<div class="switch" :class="{select : switchFlag}" @click="switchFlag = !switchFlag"></div>
-
-		<!--  -->
-		<p class="title">下拉选择</p>
-		<div class="selection">
-			<input type="text" readonly placeholder="请选择" @click="selectConShow = !selectConShow" :value="selectText">
-			<i class="icon-opt" :class="{active : selectConShow}"></i>
-			<ul v-show="selectConShow">
-				<li v-for="item in selectList" @click="selectText=item.value;selectConShow=false">{{ item.value }}</li>
-			</ul>
-		</div>
-
-		<!--  -->
-		<p class="title">表格渲染</p>
-		<div class="table-area">
-			<table>
-				<thead>
-					<tr>
-						<th v-for="item in tableHead">{{ item }}</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr v-for="item in tableData" :key="item.id">
-						<td>{{ item.subject }}</td>
-						<td>{{ item.hour }}</td>
-						<td>{{ item.isAlternated | handleAlter }}</td>
-						<td>
-							<span class="delete" @click="deleteRow(item.id)">删除</span>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-
-		<!-- 涉及组件嵌套,父子之间通信知识 -->
-		<p class="title">折叠板--涉及组件嵌套</p>
-		<div class="menu">
-			<Panel v-for="item in menuData" :name="item.name" @flag="isShow" :key="item.id">
-				<div class="level2" v-show="panelShow">
-					<pa-content v-for="i in item.data" :text="i.value"></pa-content>
-				</div>
-			</Panel>
-		</div>
-		
-		<p class="title">折叠板</p>
-		<div class="menu">
-			<!--paneldata这个名称不能含大写-->
-			<Panel2 :paneldata="menuData"></Panel2>
-		</div>
-
-		<!--  -->
-		<p class="title">计算属性</p>
-		{{ fullName }}
-
-		<!--  -->
-		<p class="title">动画效果</p>
-		<div class="animate">
-			<div class="btn" @click="animateShow = !animateShow">显示&隐藏</div>
-			<div class="content">
-				<transition name="bounce">
-					<p v-show="animateShow">啦啦啦啦啦张九南</p>
-				</transition>
-			</div>
-		</div>
-
-		<!--  -->
-		<p class="title"></p>
-	</div>
+    </div>
 </body>
 <script src="../js/vue.js"></script>
 <script src="../js/axios.min.js"></script>
 <script src="../js/commonFun.js"></script>
-
 </html>
