--- a/hello-world/src/css/init.less
+++ b/hello-world/src/css/init.less
@@ -142,7 +142,7 @@ header {
             height: 0.14rem;
             vertical-align: middle;
             display: inline-block;
-            background: url(../images/icon-sort.png) no-repeat;
+            background: url(../assets/images/icon-sort.png) no-repeat;
             background-size: 0.12rem 0.14rem;
         }
         &.active {
@@ -150,7 +150,7 @@ header {
                 color: #0099ff;
             }
             i {
-                background: url(../images/icon-sort-a.png) no-repeat;
+                background: url(../assets/images/icon-sort-a.png) no-repeat;
                 background-size: 0.12rem 0.14rem;
             }
         }
@@ -164,11 +164,11 @@ header {
     .more-filter {
         width: 1.02rem;
         height: 0.88rem;
-        background: url(../images/icon-filter-btn.png) center no-repeat;
+        background: url(../assets/images/icon-filter-btn.png) center no-repeat;
         background-size: 0.5rem 0.5rem;
         float: right;
         &.active {
-            background: url(../images/icon-filter-btn-a.png) center no-repeat;
+            background: url(../assets/images/icon-filter-btn-a.png) center no-repeat;
             background-size: 0.5rem 0.5rem;
         }
     }
@@ -337,12 +337,12 @@ header {
                             float: left;
                             width: 0.2rem;
                             height: 0.2rem;
-                            background: url(../images/start.png) no-repeat;
+                            background: url(../assets/images/start.png) no-repeat;
                             background-size: 100% 100%;
                             margin-right: 0.1rem;
                         }
                         .half-start {
-                            background: url(../images/half-start.png) no-repeat;
+                            background: url(../assets/images/half-start.png) no-repeat;
                             background-size: 100% 100%;
                         }
                     }
